--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 		"body-parser": "^1.9.0",
 		"cookie-parser": "^1.3.3",
 		"method-override": "^2.2.0",
-		"express-session": "^1.8.2"
+		"express-session": "^1.8.2",
+		
+		"async": "latest"
 	}
 }
