--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
 		"express": "~4",
 		"ejs": "~0",
 		"mongoose": "~3.8.1",
+		
 		"passport": "^0.1.17",
 		"passport-local": "^0.1.6",
+		"emailjs": "1.0.8",
 		
 		"connect-flash": "~0.1.1",
 		"bcrypt-nodejs" : "latest",
