--- a/package.json
+++ b/package.json
@@ -1,25 +1,22 @@
 {
-	"name": "playerauctions",
-	"version": "0.0.1",
-	"author": "emilschn",
-	"description": "Encheres de joueurs",
-	"dependencies": {
-		"express": "~4",
-		"ejs": "~0",
-		"mongoose": "~3.8.1",
-		
-		"passport": "^0.1.17",
-		"passport-local": "^0.1.6",
-		"emailjs": "1.0.8",
-		
-		"connect-flash": "~0.1.1",
-		"bcrypt-nodejs" : "latest",
-		
-		"body-parser": "^1.9.0",
-		"cookie-parser": "^1.3.3",
-		"method-override": "^2.2.0",
-		"express-session": "^1.8.2",
-		
-		"async": "latest"
-	}
+  "name": "playerauctions",
+  "version": "0.0.1",
+  "author": "emilschn",
+  "description": "Encheres de joueurs",
+  "dependencies": {
+    "async": "latest",
+    "bcrypt-nodejs": "latest",
+    "body-parser": "^1.9.0",
+    "connect-flash": "~0.1.1",
+    "cookie-parser": "^1.3.3",
+    "ejs": "~0",
+    "emailjs": "1.0.8",
+    "express": "~4",
+    "express-session": "^1.8.2",
+    "method-override": "^2.2.0",
+    "mongoose": "~3.8.1",
+    "passport": "^0.1.17",
+    "passport-local": "^0.1.6",
+    "primer-css": "^4.7.0"
+  }
 }
